--- a/HTMLs/historicForms.html
+++ b/HTMLs/historicForms.html
@@ -196,49 +196,39 @@
                                 <table class="table table-bordered" id="borradoresTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Distrito</th>
-                                            <th>Fecha límite (YYYY-MM-DD)</th>
-                                            <th>Fecha de registro (YYYY-MM-DD)</th>
                                             <th>ID de formulario</th>
+                                            <th>Nombre de formulario</th>
+                                            <th>Fecha de creación</th>
+                                            <th>Fecha límite</th>
                                             <th>Acciones</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Miraflores</td>
+                                            <td>1</td>
+                                            <td>Formulario 123</td>
                                             <td>2025-06-30</td>
                                             <td>2025-03-01</td>
-                                            <td>FORM-123</td>
                                             <td>
                                                 <button class="btn btn-sm btn-info">Editar</button>
                                                 <button class="btn btn-sm btn-warning">Descartar</button>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td>Miraflores</td>
-                                            <td>2025-06-30</td>
-                                            <td>2025-03-08</td>
-                                            <td>FORM-123</td>
-                                            <td>
-                                                <button class="btn btn-sm btn-info">Editar</button>
-                                                <button class="btn btn-sm btn-warning">Descartar</button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Cieneguilla</td>
-                                            <td>2025-06-30</td>
+                                            <td>3</td>
+                                            <td>Formulario 3</td>
                                             <td>2025-04-08</td>
-                                            <td>FORM-123</td>
+                                            <td>2025-06-30</td>
                                             <td>
                                                 <button class="btn btn-sm btn-info">Editar</button>
                                                 <button class="btn btn-sm btn-warning">Descartar</button>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td>Miraflores</td>
-                                            <td>2025-08-31</td>
+                                            <td>4</td>
+                                            <td>Formulario 4</td>
                                             <td>2025-03-30</td>
-                                            <td>FORM-456</td>
+                                            <td>2025-08-30</td>
                                             <td>
                                                 <button class="btn btn-sm btn-info">Editar</button>
                                                 <button class="btn btn-sm btn-warning">Descartar</button>
@@ -260,25 +250,22 @@
                                 <table class="table table-bordered" id="completadosTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th>Distrito</th>
-                                            <!--<th>Zona</th>-->
-                                            <!--<th>ID de respuesta</th>-->
+                                            <th>ID de registro</th>
+                                            <th>Nombre de formulario</th>
                                             <th>Fecha de registro</th>
-                                            <th>ID de formulario</th>
+                                            
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Miraflores</td>
-                                            <!--<td>Este</td>-->
+                                            <td>56</td>
+                                            <td>Formulario 9</td>
                                             <td>2024-03-03</td>
-                                            <td>FORM-789</td>
                                         </tr>
                                         <tr>
-                                            <td>Cieneguilla</td>
-                                            <!--<td>Oeste</td>-->
+                                            <td>75</td>
+                                            <td>Formulario 7</td>
                                             <td>2024-03-04</td>
-                                            <td>FORM-012</td>
                                         </tr>
                                     </tbody>
                                 </table>
