--- a/HTMLs/gestion_encuestadores.html
+++ b/HTMLs/gestion_encuestadores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,14 +17,13 @@
   <div id="wrapper">
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-      <!-- Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
         <img src="img/ONU.png" width="40" alt="ONU Mujeres">
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item"><a class="nav-link" href="dashboard.html"><i class="fas fa-fw fa-tachometer-alt"></i><span>Dashboard</span></a></li>
       <hr class="sidebar-divider">
-      <div class="sidebar-heading">Interface</div>
+      <div class="sidebar-heading">INTERFACE</div>
       <li class="nav-item active"><a class="nav-link" href="gestion_encuestadores.html"><i class="fas fa-fw fa-users"></i><span>Gestión de Encuestadores</span></a></li>
       <li class="nav-item"><a class="nav-link" href="gestion_formularios.html"><i class="fas fa-fw fa-file-alt"></i><span>Gestión de Formularios</span></a></li>
       <li class="nav-item"><a class="nav-link" href="contacto.html"><i class="fas fa-fw fa-phone"></i><span>Contacto</span></a></li>
@@ -35,26 +34,30 @@
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-      <div id="content">
 
+      <!-- Main Content -->
+      <div id="content">
         <!-- Topbar -->
         <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow">
-          <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3"><i class="fa fa-bars"></i></button>
+          <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+            <i class="fa fa-bars"></i>
+          </button>
           <ul class="navbar-nav ml-auto"><div class="topbar-divider d-none d-sm-block"></div></ul>
         </nav>
         <!-- End Topbar -->
 
-        <!-- Main Content -->
+        <!-- Begin Page Content -->
         <div class="container-fluid">
           <h1 class="h3 mb-2 text-gray-800">Gestión de Encuestadores</h1>
           <p class="mb-4">Administra tus encuestadores: abanéalos o asígnales formularios.</p>
 
-          <!-- Tabla con scroll -->
+          <!-- Tabla de Encuestadores -->
           <div class="card shadow mb-4">
-            <div class="card-header py-3"><h6 class="m-0 font-weight-bold text-primary">Encuestadores</h6></div>
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Encuestadores</h6>
+            </div>
             <div class="card-body p-0">
-              <!-- DataTables genera su propio contenedor scroll -->
-              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+              <table id="dataTable" class="table table-striped table-bordered mb-0" width="100%" cellspacing="0">
                 <thead class="thead-light">
                   <tr>
                     <th>Nombre</th>
@@ -64,94 +67,167 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <!-- Ejemplo de filas -->
-                  <tr><td>Juan Pérez</td><td>juan@mail.com</td><td><span class="badge badge-success">Activo</span></td>
+                  <tr>
+                    <td>Juan Pérez</td>
+                    <td>juan@mail.com</td>
+                    <td><span class="badge badge-success">Activo</span></td>
                     <td>
-                      <button class="btn btn-sm btn-warning" data-toggle="modal" data-target="#banModal" data-nombre="Juan Pérez">Banear</button>
-                      <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#assignModal" data-nombre="Juan Pérez">Asignar</button>
+                      <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#banModal" data-nombre="Juan Pérez">Banear</button>
+                      <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#assignModal" data-nombre="Juan Pérez">Asignar</button>
                     </td>
                   </tr>
-                  <!-- … más filas … -->
+                  <!-- …más filas según tu base de datos… -->
                 </tbody>
               </table>
             </div>
           </div>
-
-          <!-- Formularios Asignados -->
-          <div class="card shadow mb-4">
-            <div class="card-header py-3"><h6 class="m-0 font-weight-bold text-primary">Formularios Asignados</h6></div>
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item">Encuesta Satisfacción</li>
-                <li class="list-group-item">Formulario Datos Demográficos</li>
-              </ul>
-            </div>
-          </div>
-
         </div>
         <!-- /.container-fluid -->
 
         <!-- Footer -->
         <footer class="sticky-footer bg-white text-center py-2">
-          <span>© 2025 Tu Proyecto — ONU Mujeres</span>
+          © 2025 Tu Proyecto — ONU Mujeres
         </footer>
+        <!-- End of Footer -->
 
       </div>
-      <!-- End Content -->
+      <!-- End of Main Content -->
+
     </div>
-    <!-- End Content Wrapper -->
+    <!-- End of Content Wrapper -->
+
   </div>
-  <!-- End Wrapper -->
+  <!-- End of Page Wrapper -->
 
-  <!-- Modals (idénticos a los anteriores) -->
-  <!-- Banear Encuestador -->
-  <div class="modal fade" id="banModal" tabindex="-1"><div class="modal-dialog"><div class="modal-content">
-    <div class="modal-header"><h5 class="modal-title">Banear Encuestador</h5><button type="button" class="close" data-dismiss="modal">×</button></div>
-    <div class="modal-body">¿Seguro que quieres banear a <strong id="banName"></strong>?</div>
-    <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Cancelar</button><button class="btn btn-danger">Sí, banear</button></div>
-  </div></div></div>
-
-  <!-- Asignar Formularios -->
-  <div class="modal fade" id="assignModal" tabindex="-1"><div class="modal-dialog modal-lg"><div class="modal-content">
-    <div class="modal-header"><h5 class="modal-title">Asignar Formularios a <span id="assignName"></span></h5><button type="button" class="close" data-dismiss="modal">×</button></div>
-    <div class="modal-body">
-      <div class="form-group"><label>Instrucciones</label><textarea class="form-control" rows="2" placeholder="Escribe instrucciones..."></textarea></div>
-      <div class="form-group"><label>Selecciona formularios</label>
-        <div class="list-group">
-          <label class="list-group-item"><input type="checkbox"> Encuesta Satisfacción</label>
-          <label class="list-group-item"><input type="checkbox"> Datos Demográficos</label>
+  <!-- Banear Encuestador Modal -->
+  <div class="modal fade" id="banModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Banear Encuestador</h5>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          ¿Seguro que quieres banear a <strong id="banName"></strong>?
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button class="btn btn-danger">Sí, banear</button>
         </div>
       </div>
     </div>
-    <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Cancelar</button><button class="btn btn-primary">Confirmar Asignación</button></div>
-  </div></div></div>
+  </div>
 
-  <!-- Scripts -->
+  <!-- Asignar Formularios Modal -->
+  <div class="modal fade" id="assignModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Asignar Formularios a <span id="assignName"></span></h5>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Instrucciones</label>
+            <textarea class="form-control mb-4" rows="2" placeholder="Escribe instrucciones..."></textarea>
+          </div>
+          <div class="row">
+            <!-- Disponibles -->
+            <div class="col-md-6">
+              <h6>Formularios Disponibles</h6>
+              <ul id="availableList" class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  Encuesta Satisfacción
+                  <button class="btn btn-sm btn-success assign-btn" data-form="Encuesta Satisfacción">Asignar</button>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  Datos Demográficos
+                  <button class="btn btn-sm btn-success assign-btn" data-form="Datos Demográficos">Asignar</button>
+                </li>
+                <!-- …más items… -->
+              </ul>
+            </div>
+            <!-- Asignados -->
+            <div class="col-md-6">
+              <h6>Formularios Asignados</h6>
+              <ul id="assignedList" class="list-group">
+                <!-- Items iniciales si existen -->
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button class="btn btn-primary">Confirmar Asignación</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts (en orden) -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
   <script src="js/sb-admin-2.min.js"></script>
+
   <script>
-    $(document).ready(function(){
-      $('#dataTable').DataTable({
+    $(function(){
+      // Inicializa DataTable
+      const table = $('#dataTable').DataTable({
+        dom:
+          "<'row mb-3'<'col-sm-6'l><'col-sm-6'f>>" +
+          "<'row'<'col-sm-12'tr>>" +
+          "<'row'<'col-sm-5'i><'col-sm-7'p>>",
         paging: true,
         pageLength: 5,
-        lengthChange: false,
+        lengthChange: true,
         info: true,
         scrollY: '300px',
         scrollCollapse: true,
         ordering: false,
         language: {
+          lengthMenu: "Mostrar _MENU_ registros",
+          info: "Mostrando _START_ a _END_ de _TOTAL_ registros",
           paginate: { previous: "Anterior", next: "Siguiente" }
         }
       });
-      // Modals dinámicos
-      $('#banModal').on('show.bs.modal', e => $('#banName').text($(e.relatedTarget).data('nombre')));
-      $('#assignModal').on('show.bs.modal', e => $('#assignName').text($(e.relatedTarget).data('nombre')));
+
+      // Rellena nombre en Banear
+      $('#banModal').on('show.bs.modal', function(e){
+        $('#banName').text($(e.relatedTarget).data('nombre'));
+      });
+
+      // Rellena nombre en Asignar
+      $('#assignModal').on('show.bs.modal', function(e){
+        $('#assignName').text($(e.relatedTarget).data('nombre'));
+      });
+
+      // Asignar: mueve de disponibles a asignados
+      $('#availableList').on('click', '.assign-btn', function(){
+        const form = $(this).data('form');
+        $(this).closest('li').remove();
+        $('#assignedList').append(`
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            ${form}
+            <button class="btn btn-sm btn-danger unassign-btn" data-form="${form}">Quitar</button>
+          </li>
+        `);
+      });
+
+      // Quitar: mueve de asignados a disponibles
+      $('#assignedList').on('click', '.unassign-btn', function(){
+        const form = $(this).data('form');
+        $(this).closest('li').remove();
+        $('#availableList').append(`
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            ${form}
+            <button class="btn btn-sm btn-success assign-btn" data-form="${form}">Asignar</button>
+          </li>
+        `);
+      });
     });
   </script>
-
 </body>
 </html>
