--- a/HTMLs/gestion_formularios.html
+++ b/HTMLs/gestion_formularios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +11,11 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
   <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
+
 <body id="page-top">
-
-  <!-- Page Wrapper -->
   <div id="wrapper">
-
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-      <!-- Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="dashboard.html">
         <img src="img/ONU.png" width="40" alt="ONU Mujeres">
       </a>
@@ -34,7 +31,6 @@
     </ul>
     <!-- End Sidebar -->
 
-    <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
       <div id="content">
         <!-- Topbar -->
@@ -46,150 +42,145 @@
         </nav>
         <!-- End Topbar -->
 
-        <!-- Main Content -->
         <div class="container-fluid">
-          <!-- Heading (sin +Nuevo) -->
-          <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Gestión de Formularios</h1>
-          </div>
+          <h1 class="h3 mb-4 text-gray-800">Gestión de Formularios</h1>
 
           <!-- Filtros -->
           <div class="row mb-3">
             <div class="col-md-4">
-              <div class="form-inline">
-                <label class="mr-2 font-weight-bold">Estado:</label>
-                <select id="filterState" class="form-control form-control-sm">
-                  <option value="">Todos</option>
-                  <option value="Activo">Activo</option>
-                  <option value="Inactivo">Inactivo</option>
-                </select>
-              </div>
+              <label class="font-weight-bold">Estado:</label>
+              <select id="filterState" class="form-control form-control-sm">
+                <option value="">Todos</option>
+                <option>Activo</option>
+                <option>Inactivo</option>
+              </select>
             </div>
-            <div class="col-md-4 offset-md-4">
-              <div class="form-inline float-right">
-                <label class="mr-2 font-weight-bold">Buscar:</label>
-                <input id="searchInput" type="text" class="form-control form-control-sm" placeholder="Buscar...">
-              </div>
+            <div class="col-md-4">
+              <label class="font-weight-bold">Carpeta:</label>
+              <select id="filterFolder" class="form-control form-control-sm">
+                <option value="">Todas</option>
+                <option>Registro</option>
+                <option>Satisfacción</option>
+                <option>Datos Demográficos</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label class="font-weight-bold">Buscar:</label>
+              <input id="searchInput" type="text" class="form-control form-control-sm" placeholder="Buscar...">
             </div>
           </div>
 
-          <!-- Tabla -->
+          <!-- Tabla sin wrapper table-responsive -->
           <div class="card shadow mb-4">
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  <thead>
-                    <tr>
-                      <th>Nombre del formulario</th>
-                      <th>Fecha</th>
-                      <th>Estado</th>
-                      <th>Acción</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Ficha de registro</td>
-                      <td>15/04/25</td>
-                      <td><span class="badge badge-success">Activo</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-warning" data-toggle="modal" data-target="#deactivateModal" data-formname="Ficha de registro">
-                          Desactivar
-                        </button>
-                        <button class="btn btn-sm btn-danger" disabled data-toggle="tooltip" title="No se puede eliminar: tiene 12 respuestas registradas.">
-                          Eliminar
-                        </button>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Encuesta Satisfacción</td>
-                      <td>25/04/25</td>
-                      <td><span class="badge badge-success">Activo</span></td>
-                      <td>
-                        <button class="btn btn-sm btn-warning" data-toggle="modal" data-target="#deactivateModal" data-formname="Encuesta Satisfacción">
-                          Desactivar
-                        </button>
-                        <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteModal" data-formname="Encuesta Satisfacción">
-                          Eliminar
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+            <div class="card-body p-0">
+              <table id="dataTable" class="table table-striped table-bordered mb-0" width="100%" cellspacing="0">
+                <thead class="thead-light">
+                  <tr>
+                    <th>Nombre del formulario</th>
+                    <th>Fecha</th>
+                    <th>Carpeta</th>
+                    <th>Estado</th>
+                    <th>Acción</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Repite estas filas para probar scroll/paginación -->
+                  <tr>
+                    <td>Ficha de registro</td>
+                    <td>15/04/25</td>
+                    <td class="folder">Registro</td>
+                    <td class="estado">Activo</td>
+                    <td>
+                      <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#deactivateModal" data-form="Ficha de registro">Desactivar</button>
+                      <button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal" data-form="Ficha de registro">Eliminar</button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Encuesta Satisfacción</td>
+                    <td>25/04/25</td>
+                    <td class="folder">Satisfacción</td>
+                    <td class="estado">Activo</td>
+                    <td>
+                      <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#deactivateModal" data-form="Encuesta Satisfacción">Desactivar</button>
+                      <button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal" data-form="Encuesta Satisfacción">Eliminar</button>
+                    </td>
+                  </tr>
+                  <!-- …más filas según necesites… -->
+                </tbody>
+              </table>
             </div>
           </div>
+
+          <!-- Footer -->
+          <footer class="sticky-footer bg-white text-center py-2">
+            © 2025 Tu Proyecto — ONU Mujeres
+          </footer>
         </div>
-        <!-- /.container-fluid -->
-
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white text-center py-2">
-          <span>© 2025 Tu Proyecto — ONU Mujeres</span>
-        </footer>
-
       </div>
-      <!-- End Content -->
     </div>
-    <!-- End Content Wrapper -->
   </div>
-  <!-- End Wrapper -->
 
-  <!-- Modals de confirmación -->
-
-  <!-- Desactivar Formulario -->
+  <!-- Modals -->
   <div class="modal fade" id="deactivateModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Desactivar Formulario</h5>
-          <button type="button" class="close" data-dismiss="modal">×</button>
-        </div>
-        <div class="modal-body">
-          ¿Seguro que quieres desactivar el formulario <strong id="formNameDeactivate"></strong>?
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button class="btn btn-warning">Sí, desactivar</button>
-        </div>
-      </div>
-    </div>
+    <div class="modal-dialog"><div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title">Desactivar Formulario</h5><button type="button" class="close" data-dismiss="modal">&times;</button></div>
+      <div class="modal-body">¿Seguro que quieres desactivar <strong id="banName"></strong>?</div>
+      <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Cancelar</button><button class="btn btn-warning">Sí, desactivar</button></div>
+    </div></div>
   </div>
-
-  <!-- Eliminar Formulario -->
   <div class="modal fade" id="deleteModal" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Eliminar Formulario</h5>
-          <button type="button" class="close" data-dismiss="modal">×</button>
-        </div>
-        <div class="modal-body">
-          ¿Seguro que quieres eliminar el formulario <strong id="formNameDelete"></strong>?
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button class="btn btn-danger">Sí, eliminar</button>
-        </div>
-      </div>
-    </div>
+    <div class="modal-dialog"><div class="modal-content">
+      <div class="modal-header"><h5 class="modal-title">Eliminar Formulario</h5><button type="button" class="close" data-dismiss="modal">&times;</button></div>
+      <div class="modal-body">¿Seguro que quieres eliminar <strong id="delName"></strong>?</div>
+      <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal">Cancelar</button><button class="btn btn-danger">Sí, eliminar</button></div>
+    </div></div>
   </div>
 
-  <!-- Scripts -->
+  <!-- Scripts en orden correcto -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
   <script src="js/sb-admin-2.min.js"></script>
+
   <script>
-    $('#dataTable').DataTable({ "ordering": false });
-    $(function(){ $('[data-toggle="tooltip"]').tooltip(); });
-    $('#deactivateModal').on('show.bs.modal', e => {
-      $('#formNameDeactivate').text($(e.relatedTarget).data('formname'));
-    });
-    $('#deleteModal').on('show.bs.modal', e => {
-      $('#formNameDelete').text($(e.relatedTarget).data('formname'));
+    $(function(){
+      // Inicializa DataTable con DOM personalizado
+      const table = $('#dataTable').DataTable({
+        dom:
+          "<'row mb-3'<'col-sm-6'l><'col-sm-6'f>>" +
+          "<'row'<'col-sm-12'tr>>" +
+          "<'row'<'col-sm-5'i><'col-sm-7'p>>",
+        order: [[1,'desc']],
+        scrollY: '300px',
+        scrollCollapse: true,
+        paging: true,
+        pageLength: 10,
+        lengthChange: true,
+        info: true
+      });
+
+      // Modals dinámicos
+      $('#deactivateModal').on('show.bs.modal', e =>
+        $('#banName').text($(e.relatedTarget).data('form'))
+      );
+      $('#deleteModal').on('show.bs.modal', e =>
+        $('#delName').text($(e.relatedTarget).data('form'))
+      );
+
+      // Filtros Estado + Carpeta
+      $('#filterState, #filterFolder').on('change', function(){
+        const est = $('#filterState').val().toLowerCase(),
+              car = $('#filterFolder').val().toLowerCase();
+        table.rows().every(function(){
+          const d = this.data(),
+                ok = (!est  || d[3].toLowerCase()===est) &&
+                     (!car  || d[2].toLowerCase()===car);
+          $(this.node()).toggle(ok);
+        });
+      });
     });
   </script>
-
 </body>
 </html>
